# WebHostESP32

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt
main/src/: main.cpp
main/src/comuni/web_server/: README.md  WebServer.cpp  WebServer.h
main/src/comuni/wifi/: WiFi.cpp  WiFi.h  WiFi_Settings.h
